# Projects

./: .gitignore  LICENSE  README.md  backlog  base.cmake  setup
BalancedBinaryTree/: CMakeLists.txt
BalancedBinaryTree/algorithm/consecutive_red_regulator/: consecutive_red_regulator.h
BalancedBinaryTree/algorithm/item_inserter/: item_inserter.hpp
BalancedBinaryTree/algorithm/item_remover/: item_remover.h  item_remover.hpp
BalancedBinaryTree/generic/resource_manager/: resource_manager.cpp
BalancedBinaryTree/rb_item/: rb_item_test.cpp
BalancedBinaryTree/rb_tree/: rb_tree.h  rb_tree.hpp  rb_tree_test.cpp
BigNumberArithmetic/: CMakeLists.txt
BigNumberArithmetic/bignum/: bignum.cpp  bignum.hpp  bignum_test.cpp
BigNumberArithmetic/generic/: coprime_error.hpp
BigNumberArithmetic/generic/bits_value/: bits_value.cpp  bits_value.hpp  bits_value_test.cpp
BigNumberArithmetic/operation/: operation.hpp  operation_test.cpp
BigNumberArithmetic/operation/addition/: addition.cpp  addition.hpp
BigNumberArithmetic/operation/division/: division.cpp  division.hpp
BigNumberArithmetic/operation/modulus/: modulus.cpp  modulus.hpp
BigNumberArithmetic/operation/multiplication/: multiplication.cpp  multiplication.hpp
BigNumberArithmetic/operation/subtraction/: subtraction.cpp  subtraction.hpp
BitTree/: CMakeLists.txt
BitTree/bit_tree/: bit_tree.cpp  bit_tree.hpp  bit_tree_test.cpp
BitTree/generic/: bit_tree_types.hpp
BitTree/generic/resource_manager/: resource_manager.cpp  resource_manager.hpp
BitTree/node/: node_i.hpp
BitTree/node/bit_node/: bit_node.cpp  bit_node.hpp  bit_node_test.cpp
BitTree/node/leaf_node/: leaf_node.hpp  leaf_node_test.cpp
BitTree/node/mock_node/: mock_node.cpp  mock_node.hpp
CNN/: CMakeLists.txt  activation.cpp  activation.hpp  activation_factory.cpp  activation_factory.hpp  activation_mock.cpp  activation_mock.hpp  activation_test.cpp  activation_type.hpp  average_neuron.cpp  average_neuron.hpp  average_neuron_test.cpp  batch_iterator.cpp  batch_iterator.hpp  batch_iterator_test.cpp  convolution_layer_factory.cpp  convolution_layer_factory.hpp  convolutional_filter.cpp  convolutional_filter.hpp  convolutional_filter_test.cpp  data_cache.cpp  data_cache.hpp  data_reader.cpp  data_reader.hpp  dense_layer_factory.cpp  dense_layer_factory.hpp  dense_layer_proxy.cpp  dense_layer_proxy.hpp  dnn_type.hpp  dropout_layer.cpp  dropout_layer.hpp  dropout_layer_factory.cpp  dropout_layer_factory.hpp  dropout_layer_test.cpp  epoch_indices.cpp  epoch_indices.hpp  epoch_indices_test.cpp  feature_filter.cpp  feature_filter.hpp  feature_layer_factory.cpp  (+113 more)
Concurrent/: CMakeLists.txt
Concurrent/queue/: queue.h  queue.hpp  queue_test.cpp
Concurrent/queue/atomic_item/: atomic_item.cpp  atomic_item.hpp  atomic_item_test.cpp
Concurrent/shared_lock/: shared_lock.cpp  shared_lock.hpp  shared_lock_test.cpp
Concurrent/spin_lock/: spin_lock.cpp  spin_lock.hpp  spin_lock_test.cpp
Dijkstra/: CMakeLists.txt
Dijkstra/generic/item/: item.cpp  item.hpp
Dijkstra/generic/priority_queue/: priority_queue.h  priority_queue.hpp  priority_queue_test.cpp
Dijkstra/generic/resource_manager/: resource_manager.cpp  resource_manager.hpp
Dijkstra/shortest_path/: shortest_path.cpp  shortest_path.hpp  shortest_path_test.cpp
ExpressionEvaluation/: CMakeLists.txt
ExpressionEvaluation/application/: function_tests.cpp  operator_tests.cpp  parentheses_tests.cpp
ExpressionEvaluation/application/calculator/: calculator.cpp  calculator.hpp
ExpressionEvaluation/compile/compile_utility/: compile_utility.cpp  compile_utility.hpp
ExpressionEvaluation/compile/compiler_factory/: compiler_factory.cpp  compiler_factory.hpp
ExpressionEvaluation/compile/compiler_mock/: compiler_mock.cpp  compiler_mock.hpp
ExpressionEvaluation/evaluation/argument/: argument.cpp  argument.hpp  argument_test.cpp
ExpressionEvaluation/evaluation/operand/: operand.cpp  operand.hpp
ExpressionEvaluation/generic/: compiler_factory_i.hpp  compiler_i.hpp  expression_types.hpp  operand_i.hpp  parser_factory_i.hpp  parser_i.hpp
ExpressionEvaluation/parse/: parse_utility.hpp
FFT/: CMakeLists.txt
FFT/fourier_transform/: fourier_transform.cpp  fourier_transform.hpp  fourier_transform_test.cpp
FFT/generic/: fft_types.hpp
FFT/multiplication/: multiplication.h  multiplication.hpp  multiplication_test.cpp
GameOfLife/: CMakeLists.txt  game_test.cpp
GameOfLife/board/: board.cpp  board.hpp  board_test.cpp
GameOfLife/cell/: cell.cpp  cell.hpp  cell_i.hpp  cell_test.cpp
GameOfLife/cell_factory/: cell_factory.cpp  cell_factory.hpp  cell_factory_i.hpp
GameOfLife/grid/: grid.cpp  grid.hpp  grid_test.cpp
LinearAlgebra/: CMakeLists.txt
LinearAlgebra/generic/: algebra_types.hpp
LinearAlgebra/matrices/: index_matrix_i.hpp
LinearAlgebra/operation/: operations.cpp  operations.hpp  utility.hpp
MinimumSpanningTree/: CMakeLists.txt
MinimumSpanningTree/generic/: tree_type.hpp
MinimumSpanningTree/minimum_spanning_tree/: minimum_spanning_tree.cpp  minimum_spanning_tree.hpp  minimum_spanning_tree_test.cpp
MinimumSpanningTree/tree_retriever/: tree_retriever.cpp  tree_retriever.hpp  tree_retriever_test.cpp
PatternMatch/: CMakeLists.txt
PatternMatch/generic/: pattern_match_types.hpp
PatternMatch/kmp/: kmp_search.cpp  kmp_search.hpp  kmp_test.cpp
PatternMatch/trie/: suffix_trie.cpp  suffix_trie.hpp  suffix_trie_test.cpp
RNN/: CMakeLists.txt  category_net.h  category_net.hpp  category_net_test.cpp  gru_cell_old.cpp  gru_cell_old.hpp  sequence_net.h  sequence_net.hpp  sequence_net_test.cpp
RNN/core/: category_vec.h  category_vec.hpp  gru_cell.h  gru_cell.hpp  gru_state.h  gru_state.hpp  gru_transition.h  gru_transition.hpp  word_vec.h  word_vec.hpp
RNN/generic/: activity.cpp  activity.hpp  rand.cpp  rand.hpp  rnn_type.hpp  utils.cpp  utils.hpp
SortAlgorithm/: CMakeLists.txt
SortAlgorithm/generic/: utility.hpp
SortAlgorithm/heapsort/: heapsort.h  heapsort.hpp  heapsort_test.cpp
SortAlgorithm/quicksort/: quick_sorter.hpp  quicksort.h  quicksort.hpp  quicksort_test.cpp
(+174 files in other folders)
